Fixed padding on mobile

--- a/Styles.css
+++ b/Styles.css
@@ -11,13 +11,6 @@
     font-family: 'Courier New', Courier, monospace;
 }
 
-@media(max-width: 450){
-    :root{
-        padding-left: 5%;
-        padding-right: 5%;
-    }
-}
-
 a{
     color: aqua;
     margin-top: 25px;
@@ -144,4 +137,11 @@ h1 {
     width: 100%;
     height: 50px;
     object-fit: contain;
+}
+
+@media(max-width: 980px){
+    :root{
+        padding-left: 5%;
+        padding-right: 5%;
+    }
 }
